добавил: ValidationRecommendationUtils, SkillDto исправил: RecommendationMapper, RecommendationController, RecommendationService,  RecommendationDto,  SkillOfferDto