@@ -4,56 +4,61 @@ import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 import org.mapstruct.Named;
 import school.faang.user_service.dto.recommendation.RecommendationDto;
+import school.faang.user_service.dto.recommendation.SkillOfferDto;
 import school.faang.user_service.entity.User;
 import school.faang.user_service.entity.recommendation.Recommendation;
 import school.faang.user_service.entity.recommendation.SkillOffer;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Mapper(componentModel = "spring")
 public interface RecommendationMapper {
-    @Mapping(target = "author", source = "authorId", qualifiedByName = "mapAuthorIdToUser")
-    @Mapping(target = "receiver", source = "receiverId", qualifiedByName = "mapReceiverIdToUser")
-    @Mapping(target = "skillOffers", source = "skillOfferIds")
-    Recommendation toEntity(RecommendationDto recommendation);
 
-    @Mapping(target = "skillOfferIds", source = "skillOffers")
+    @Mapping(target = "author", source = "authorId", qualifiedByName = "mapIdToUser")
+    @Mapping(target = "receiver", source = "receiverId", qualifiedByName = "mapIdToUser")
+    @Mapping(target = "skillOffers", source = "skillOffersDto")
+    Recommendation toEntity(RecommendationDto recommendationDto);
+
+    @Mapping(target = "authorId", source = "author.id")
+    @Mapping(target = "receiverId", source = "receiver.id")
+    @Mapping(target = "skillOffersDto", source = "skillOffers")
     RecommendationDto toDto(Recommendation recommendation);
 
-    default List<SkillOffer> mapSkillOfferIdsToSkillOffers(List<Long> skillOffersIds) {
-        return skillOffersIds.stream()
-                .map(id -> {
+    default List<SkillOffer> mapSkillOfferDtosToSkillOffers(List<SkillOfferDto> skillOfferDtos) {
+        if (skillOfferDtos == null) {
+            return null;
+        }
+        return skillOfferDtos.stream()
+                .map(dto -> {
                     SkillOffer skillOffer = new SkillOffer();
-                    skillOffer.setId(id);
+                    skillOffer.setId(dto.getId());
+                    skillOffer.getSkill().setId(dto.getSkillDto().getId());
                     return skillOffer;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    default List<Long> mapSkillOffersToSkillOfferIds(List<SkillOffer> skillOffers) {
+    default List<SkillOfferDto> mapSkillOffersToSkillOfferDtos(List<SkillOffer> skillOffers) {
+        if (skillOffers == null) {
+            return null;
+        }
         return skillOffers.stream()
-                .map(SkillOffer::getId)
-                .collect(Collectors.toList());
+                .map(skillOffer -> {
+                    SkillOfferDto dto = new SkillOfferDto();
+                    dto.setId(skillOffer.getId());
+                    dto.getSkillDto().setId(skillOffer.getSkill().getId());
+                    return dto;
+                })
+                .toList();
     }
 
-    @Named("mapAuthorIdToUser")
-    default User mapAuthorIdToUser(Long authorId) {
-        if (authorId == null) {
+    @Named("mapIdToUser")
+    default User mapAuthorIdToUser(Long id) {
+        if (id == null) {
             return null;
         }
         User user = new User();
-        user.setId(authorId);
-        return user;
-    }
-
-    @Named("mapReceiverIdToUser")
-    default User mapReceiverIdToUser(Long receiverId) {
-        if (receiverId == null) {
-            return null;
-        }
-        User user = new User();
-        user.setId(receiverId);
+        user.setId(id);
         return user;
     }
 }
